Update happy users splides and images.

--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -41,7 +41,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide d-flex">
-                                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-03.jpg');"></div>
                                 <div class="splide__content">
                                     <p>“With Keptn we are continuously evaluating resiliency of our microservices and
                                         infrastructure by running everyday performance and chaos tests. Keptn allowed us
@@ -57,7 +57,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide d-flex">
-                                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-02.jpg');"></div>
                                 <div class="splide__content">
                                     <p>“Keptn enables us to shift-left within our development life-cylce and have faster
                                         turnaround times by adding another layer of quality evaluations to our pipelines.
@@ -73,7 +73,7 @@
                                 </div>
                             </li>
                             <li class="splide__slide d-flex">
-                                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-04.jpg');"></div>
                                 <div class="splide__content">
                                     <p>“The combination of LitmusChaos testing and SLO-based evaluations with Keptn
                                         allows our users to identify and fix weaknesses in the resiliency of their
@@ -85,6 +85,20 @@
                                     </p>
                                     <p class="splide__info">
                                         Co-founder&COO of MayaData and Maintainer at LitmusChaos
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="splide__slide d-flex">
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-05.png');"></div>
+                                <div class="splide__content">
+                                    <p>“Keptn Quality Gates integrated into our CD helped us improve speed of delivery
+                                        by 75% and reduce manual work to evaluate results by 80%”
+                                    </p>
+                                    <p class="splide__name">
+                                        Bert van der Heyden
+                                    </p>
+                                    <p class="splide__info">
+                                        Principal digital Performance Consultant at RealDolmen
                                     </p>
                                 </div>
                             </li>
