Update description meta.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,7 @@ page-home
 {{ end }}
 
 {{ define "meta" }}
-<meta property="og:description" content="Cloud-native application life-cycle orchestration">
+<meta property="og:description" content="Keptn automates observability, SLO-driven multi-stage delivery, and operations">
 <meta property="og:title" content="Keptn - Cloud-native application life-cycle orchestration.">
 <meta property="og:image" content="https://keptn.sh/favicon.png">
 <meta property="og:url" content="https://keptn.sh/index.html">
