--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -89,16 +89,16 @@
                                 </div>
                             </li>
                             <li class="splide__slide d-flex">
-                                <div class="splide__image" style="background-image: url('/images/home/img-client-05.png');"></div>
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-05.jpg');"></div>
                                 <div class="splide__content">
                                     <p>“Keptn Quality Gates integrated into our CD helped us improve speed of delivery
-                                        by 75% and reduce manual work to evaluate results by 80%”
+                                        by 75% and reduce manual work to evaluate results by 80%.”
                                     </p>
                                     <p class="splide__name">
-                                        Bert van der Heyden
+                                        Wim Verhaeghe
                                     </p>
                                     <p class="splide__info">
-                                        Principal digital Performance Consultant at RealDolmen
+                                        KBI-Connect DevOps team lead at Inetum – RealDolmen
                                     </p>
                                 </div>
                             </li>
