--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -52,6 +52,12 @@
     <div class="row pt-3 pt-md-0">
       <div class="col-12 pt-4">
         <p class="footer-text">Initially created by Dynatrace</p>
+        {{ $year := now.Year }}
+        <p class="footer-text">
+        &copy; {{ $year }} The Keptn Authors | Documentation Distributed under CC-BY-4.0
+        </br>
+        &copy; {{ $year }} The Linux Foundation. All rights reserved. The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, please see our <a href="https://www.linuxfoundation.org/trademark-usage/" class="footer-text">Trademark Usage</a> page.
+        </p>
       </div>
     </div>
   </div>
