--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -43,7 +43,7 @@
                             <li class="splide__slide d-flex">
                                 <div class="splide__image" style="background-image: url('/images/home/img-client-02.jpg');"></div>
                                 <div class="splide__content">
-                                    <p>“Keptn enables us to shift-left within our development life-cylce and have faster
+                                    <p>“Keptn enables us to shift-left within our development life-cycle and have faster
                                         turnaround times by adding another layer of quality evaluations to our pipelines.
                                         These quality gates help us to prevent shipping bad code to production -
                                         all done automatically without human intervention.”
