--- a/layouts/partials/happy-users-logos.html
+++ b/layouts/partials/happy-users-logos.html
@@ -4,7 +4,9 @@
 
     {{ $logoNumbers := (seq 1 $nrOfLogos) | shuffle }}
     {{ range first $nrOflogosToDisplay $logoNumbers | shuffle }}
+    <div>
         <img src="./images/home/happy-users/logos/logo-{{ . }}.png">
+    </div>
     {{ end }}
     <a href="https://github.com/keptn/keptn/blob/master/ADOPTERS.md">
         <img src="/images/home/add-organisation.svg">
