--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -11,7 +11,7 @@
       <div class="col-6 col-md-2">
         <p class="footer-title mb-2">Sitemap</p>
         <ul class="footer-links">
-          <li><a href="./why-keptn/" class="footer-link">Why Keptn?</a></li>
+          <li><a href="/why-keptn/" class="footer-link">Why Keptn?</a></li>
           <li><a href="https://keptn.sh/docs" class="footer-link">Docs</a></li>
           <li><a href="https://tutorials.keptn.sh" class="footer-link">Tutorials</a></li>
           <li><a href="https://github.com/keptn-contrib" class="footer-link">Integration</a></li>
