--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -51,7 +51,7 @@
     </div>
     <div class="row pt-3 pt-md-0">
       <div class="col-12 pt-4">
-        <p class="footer-text">Initially created by <a href="https://www.dyntrace.com"  class="footer-text">Dynatrace</a></p>
+        <p class="footer-text">Initially created by <a href="https://www.dyntrace.com"  class="footer-text" target="_blank" rel="noopener">Dynatrace</a></p>
         {{ $year := now.Year }}
         <p class="footer-text">
         &copy; {{ $year }} The Keptn Authors | Documentation Distributed under CC-BY-4.0
