adding community pages
Signed-off-by: jetzlstorfer <juergen.etzlstorfer@dynatrace.com>

--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -24,11 +24,11 @@
       </a>
     </li>
 
-    <li class="menu-item-community">
+    <!--li class="menu-item-community">
       <a href="https://github.com/keptn/community" target="_blank">
         <span>Community</span>
       </a>
-    </li>
+    </li-->
     
   </ul>
   <a class="button button--header" href="/docs/quickstart/">Quick Start</a>
