remove unused typeIt js library
Signed-off-by: jetzlstorfer <juergen.etzlstorfer@dynatrace.com>

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,9 @@ header-transparent
 {{ end }}
 
 {{ define "header_js" }}
+<!-- script to include would go here 
 <script src="https://cdn.jsdelivr.net/npm/typeit@6.0.3/dist/typeit.min.js" />
+-->
 {{ end }}
 
 {{ define "body_classes" }}
