--- a/layouts/why-keptn/why-keptn.html
+++ b/layouts/why-keptn/why-keptn.html
@@ -10,7 +10,9 @@ header-transparent
 {{ end }}
 
 {{ define "header_js" }}
+<!-- script to include would go here 
 <script src="https://cdn.jsdelivr.net/npm/typeit@6.0.3/dist/typeit.min.js" />
+-->
 {{ end }}
 
 {{ define "body_classes" }}
