--- a/layouts/partials/happy-users.html
+++ b/layouts/partials/happy-users.html
@@ -95,6 +95,19 @@
                                     </p>
                                 </div>
                             </li>
+                            <li class="splide__slide d-flex">
+                                <div class="splide__image" style="background-image: url('/images/home/img-client-06.jpg');"></div>
+                                <div class="splide__content">
+                                    <p>Keptn enables us to deliver new features and updates fast while maintaining a high standard of quality. With Keptn Quality Gates we can be sure only good builds make it to production. Keptn also saves us ~80% time that is otherwise spent in manual maintaining and analyzing our delivery pipelines!”
+                                    </p>
+                                    <p class="splide__name">
+                                        Patrick Hofmann
+                                    </p>
+                                    <p class="splide__info">
+                                        Senior Consultant at amasol AG
+                                    </p>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
