--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -34,11 +34,15 @@
     background-color: transparent;
     color: transparent;
     box-shadow: none;
-    top: 72px;
+    top: 0;
     z-index: 1500;
 
-    @media screen and (min-width: $bp-md) {
-      top: 64px;
+    &.push-down {
+      top: 72px;
+
+      @media screen and (min-width: $bp-md) {
+        top: 64px;
+      }
     }
 
     a {
