making pushed down navi default
Signed-off-by: jetzlstorfer <juergen.etzlstorfer@dynatrace.com>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="header fixed-top">
+<div class="header fixed-top push-down">
   <div class="container">
     <div class="logo">
       <a href="/">
