--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,11 +1,11 @@
-<!--div class="teaser section-primary">
+div class="teaser section-primary">
   <div class="container">
     <div class="row">
       <div class="col-12 d-flex flex-column text-center">
         
-        <h3>Keptn 0.7.3 is available! Find all <a href="https://github.com/keptn/keptn/releases/tag/0.7.3">details on this patch release here</a>.</h3>
+        <h3>Keptn 0.8.0 is available! Find all <a href="https://github.com/keptn/keptn/releases/tag/0.8.0">details on this patch release here</a>.</h3>
         
       </div>
     </div>
   </div>
-</div-->
+</div-
