--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,4 +1,4 @@
-div class="teaser section-primary">
+<div class="teaser section-primary">
   <div class="container">
     <div class="row">
       <div class="col-12 d-flex flex-column text-center">
