--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -37,7 +37,7 @@
           <a href="https://twitter.com/keptnProject" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-twitter.svg">
           </a>
-          <a href="https://groups.google.com/g/keptn" class="footer-icon-link">
+          <a href="https://keptn.sh/community/newsletter" class="footer-icon-link">
             <img class="footer-icon" alt="Keptn Homepage" src="{{ .Site.BaseURL }}/images/home/icon-mail.svg">
           </a>
           <a href="https://github.com/keptn/keptn" class="footer-icon-link">
