--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12 d-flex flex-column text-center">
         
-        <h3><a href="./community/kubecon-eu-2021/">Visit us at KubeCon Europe</a> from May 4-7th! All details <a href="./community/kubecon-eu-2021/">here.</a></h3>
+        <h3>Keptn 0.8.2 is available! Find all <a href="https://github.com/keptn/keptn/releases/tag/0.8.2">details on this release here</a>.</h3>
         
       </div>
     </div>
