adding public demo link
Signed-off-by: jetzlstorfer <juergen.etzlstorfer@dynatrace.com>

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -22,16 +22,21 @@
           <div class="d-block">
             <a class="d-inline-block button button--filledGreen mb-3 mb-lg-0 mr-0 mr-lg-3"
                href="https://keptn.sh/docs/quickstart/">
-              Start now!
+              Install Keptn!
             </a>
           </div>
           <div class="d-block">
+            <a class="d-inline-block button button--filledWhite" href="https://tutorials.keptn.sh/tutorials/keptn-public-demo-08/index.html">
+              Explore demo installation
+            </a>
+          </div> 
+          <!-- <div class="d-block">
             <a class="d-inline-block button button--filledWhite" href="https://github.com/keptn/keptn">
               Keptn on Github
               <img class="icon" src="/images/general/icon-github-home.svg" alt="Github">
               <img class="icon icon--hover" src="/images/general/icon-github-hover.svg" alt="Github">
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
