--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -27,7 +27,7 @@
           </div>
           <div class="d-block">
             <a class="d-inline-block button button--filledWhite" href="https://tutorials.keptn.sh/tutorials/keptn-public-demo-08/index.html">
-              Explore demo installation
+              Explore live demo
             </a>
           </div> 
           <!-- <div class="d-block">
