adding 1on1 links
Signed-off-by: jetzlstorfer <juergen.etzlstorfer@dynatrace.com>

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -15,7 +15,7 @@
           {{ end }}
 
           <div>
-            <a class="contact-wrapper no-underline" href="https://join.slack.com/t/keptn/shared_invite/enQtNTUxMTQ1MzgzMzUxLWMzNmM1NDc4MmE0MmQ0MDgwYzMzMDc4NjM5ODk0ZmFjNTE2YzlkMGE4NGU5MWUxODY1NTBjNjNmNmI1NWQ1NGY" target="_blank">
+            <a class="contact-wrapper no-underline" href="https://slack.keptn.sh" target="_blank">
               <img class="icon" src="/images/general/icon-slack.svg" alt="Slack">
               <img class="icon icon--hover" src="/images/general/icon-slack-hover.svg" alt="Slack">
             </a>
