--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -19,7 +19,7 @@
     </li>
 
     <li class="menu-item-integrations">
-      <a href="https://keptn.sh/docs/integrations/">
+      <a href="/docs/integrations/">
         <span>Integrations</span>
       </a>
     </li>
