--- a/layouts/partials/sidebar-multicard.html
+++ b/layouts/partials/sidebar-multicard.html
@@ -7,7 +7,7 @@
         {{ $current := . }}
 
         {{ range $count, $page := $pages }}
-        {{ if eq .Parent $section }}
+        {{ if eq .Parent $section and not $page.Params.hide }}
 
         <div class="card">
             <div class="card-header" role="tab" id="header{{ $count }}">
