--- a/layouts/partials/sidebar-multicard.html
+++ b/layouts/partials/sidebar-multicard.html
@@ -7,7 +7,9 @@
         {{ $current := . }}
 
         {{ range $count, $page := $pages }}
-        {{ if eq .Parent $section and not $page.Params.hide }}
+        {{ if eq .Parent $section }}
+        
+        {{ if not $page.Params.hide }}
 
         <div class="card">
             <div class="card-header" role="tab" id="header{{ $count }}">
@@ -32,6 +34,7 @@
             {{ end }}
 
         </div>
+        {{ end }}
         {{ end }}
         {{ end }}
 
