--- a/layouts/partials/sidebar-multicard.html
+++ b/layouts/partials/sidebar-multicard.html
@@ -8,6 +8,8 @@
 
         {{ range $count, $page := $pages }}
         {{ if eq .Parent $section }}
+        
+        {{ if not $page.Params.hide }}
 
         <div class="card">
             <div class="card-header" role="tab" id="header{{ $count }}">
@@ -32,6 +34,7 @@
             {{ end }}
 
         </div>
+        {{ end }}
         {{ end }}
         {{ end }}
 
