fix: Replaced broken link to docs page
Signed-off-by: TannerGilbert <gilberttanner.work@gmail.com>

--- a/layouts/partials/usage.html
+++ b/layouts/partials/usage.html
@@ -20,7 +20,7 @@
           </div>
           /-->
           <div class="d-block">
-            <a class="button button--outlinedBlue d-inline-block" href="https://keptn.sh/docs/0.7.x/monitoring/">
+            <a class="button button--outlinedBlue d-inline-block" href="https://keptn.sh/docs/">
               Read docs
             </a>
           </div>
