Improving Documentation Build
Adding GitHub Action for PR Verification,
including HTMLTEST for checking HTML

Adding makefile for local development

Signed-off-by: Simon Schrottner <simon.schrottner@dynatrace.com>

--- a/layouts/partials/tools-cards.html
+++ b/layouts/partials/tools-cards.html
@@ -44,7 +44,7 @@
           <img src="/images/home/integrations/tools-observability-prometheus.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
-          <img src="">
+          <img src="" data-proofer-ignore>
         </div>
         <a class="teaser-card teaser-card--smallPadding teaser-card--outline" href="https://github.com/keptn-sandbox/contributing">
         </a>
