--- a/layouts/partials/happy-users-logos.html
+++ b/layouts/partials/happy-users-logos.html
@@ -2,7 +2,7 @@
     {{ $nrOfLogosToDisplay := 5 }}
     {{ range seq 1 $nrOfLogosToDisplay  }}
     <div>
-        <img class="js-happy-users-logo">
+        <img class="js-happy-users-logo" data-proofer-ignore>
     </div>
     {{ end }}
     <a href="https://github.com/keptn/keptn/blob/master/ADOPTERS.md">
