change status Sandbox to Incubating
Signed-off-by: Omkar0114 <88308267+Omkar0114@users.noreply.github.com>

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -50,7 +50,7 @@
         <p>&nbsp;</p>
 
         <img src="/images/home/cloud-native-computing.svg" alt="CNCF" style="max-width:50%"><br>
-        <p>We are a <a href="https://cncf.io">Cloud Native Computing Foundation</a> Sandbox project.</p>
+        <p>We are a <a href="https://cncf.io">Cloud Native Computing Foundation</a> Incubating project.</p>
 
       </div>
     </div>
