Add Owl Carousel, adjusted to the current Hugo version
Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,10 +19,14 @@
   {{- $cssOptions := cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle" "compressed") }}
   {{- $style := resources.Get "scss/style.scss" | toCSS $cssOptions }}
   {{ $lightbox := resources.Get "js/libs/doc/lightbox/css/lightbox.min.css" }}
+  {{ $owlcarousel := resources.Get "css/owl.carousel.css" }}
+  {{ $owlcarouseltheme := resources.Get "css/owl.theme.css" }}
 
   <link rel="stylesheet" href="{{ ($style | minify | fingerprint).RelPermalink }}">
   <link rel="stylesheet" href="{{ ($lightbox | minify | fingerprint).RelPermalink }}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@2.4.21/dist/css/splide.min.css">
+  <link rel="stylesheet" href="{{ ($owlcarousel | minify | fingerprint).RelPermalink }}">
+  <link rel="stylesheet" href="{{ ($owlcarouseltheme | minify | fingerprint).RelPermalink }}">
 
   {{ block "header_css" . }}
   {{ end }}
@@ -197,6 +201,8 @@
   {{ $docmisc := resources.Get "js/libs/doc/misc.js" }}
   {{ $docprism := resources.Get "js/libs/doc/prism.js" }}
   {{ $doclightbox := resources.Get "js/libs/doc/lightbox/js/lightbox-plus-jquery.min.js" }}
+  {{ $owlcarouseljs := resources.Get "js/libs/owl.carousel.min.js" }}
+
   {{ block "footer_js" . }}
   {{ end }}
 
@@ -212,12 +218,14 @@
   <script type="text/javascript" src="{{ $docmisc.RelPermalink }}"></script>
   <script type="text/javascript" src="{{ $docprism.RelPermalink }}"></script>
   <script type="text/javascript" src="{{ $doclightbox.RelPermalink }}"></script>
+  <script type="text/javascript" src="{{ $owlcarouseljs.RelPermalink }}"></script>
   {{ else }}
   <script type="text/javascript" src="{{ ($scripts | minify | fingerprint).RelPermalink }}"></script>
   <script type="text/javascript" src="{{ ($docutils | minify | fingerprint).RelPermalink }}"></script>
   <script type="text/javascript" src="{{ ($docmisc | minify | fingerprint).RelPermalink }}"></script>
   <script type="text/javascript" src="{{ ($docprism | minify | fingerprint).RelPermalink }}"></script>
   <script type="text/javascript" src="{{ ($doclightbox | minify | fingerprint).RelPermalink }}"></script>
+  <script type="text/javascript" src="{{ ($owlcarouseljs | minify | fingerprint).RelPermalink }}"></script>
   {{ end }}
 
   {{ partial "google-analytics.html" . }}
