--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,6 +32,9 @@ page-home
 {{/* Intro */}}
 {{ partial "intro.html" . }}
 
+{{/* Intro */}}
+{{ partial "carousel.html" . }}
+
 {{/* Usage */}}
 {{ partial "usage.html" . }}
 
