More text edits
Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -3,8 +3,9 @@
     <div class="row">
       <div class="col-12 d-flex flex-column">
         <ul>
-          <li>Join us for Kubecon and <a href="https://community.cncf.io/events/details/cncf-keptn-community-presents-keptn-community-day-kubecon-cloudnativecon-detroit/">Keptn Community Day</a> in Detroit! Community booth, main track talks, and a first ever full-day Keptn event.
-          <li>Check out the <a href="https://github.com/keptn/lifecycle-controller">Keptn Lifecycle Controller</a>! Cloud native pre-, post-deployment and application health checks.
+          <li>Join us for Kubecon and <a href="https://community.cncf.io/events/details/cncf-keptn-community-presents-keptn-community-day-kubecon-cloudnativecon-detroit/">Keptn Community Day</a> in Detroit!
+              Community booth in the project pavillion, cool demos, main track talks, and a first ever full-day Keptn event.
+          <li>Check out the <a href="https://github.com/keptn/lifecycle-controller">Lifecycle Controller</a>! Cloud native pre-, post-deployment and application health checks.
           <li>Keptn 0.19.1 is available! Find all <a href="./docs/news/release_announcements/keptn-0191/">details on this release here</a>.
         </ul>
       </div>
