--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,6 +29,9 @@ page-home
 
 {{ define "main" }}
 
+{{/* Announcements */}}
+{{ partial "announcement.html" . }}
+
 {{/* Intro */}}
 {{ partial "intro.html" . }}
 
