Make the hyperlinks gray
Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -113,3 +113,12 @@
     }
   }
 }
+
+.box-announcements {
+  .ul.li {
+    a {
+      font-family: $font-family-base;
+      color: $white;
+    }
+  }
+}
