--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,7 +1,7 @@
 <div class="teaser teaser-box--white section-primary push-down">
   <div class="container">
     <div class="row">
-      <div class="col-12 d-flex flex-column">
+      <div class="col-12 d-flex flex-column box-announcements">
         <ul>
           <li>Join us for Kubecon and <a href="https://community.cncf.io/events/details/cncf-keptn-community-presents-keptn-community-day-kubecon-cloudnativecon-detroit/">Keptn Community Day</a> in Detroit!
               Community booth in the project pavillion, cool demos, main track talks, and a first ever full-day Keptn event.
