Landing banner updates (#1482)
* Use a restyled logo on the banner

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

* Hid the announcement carousel for now

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

* Update rendering of the news to support multi-lists without bogus layout

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

* More text edits

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

* Move announcements to the to

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

* Make the hyperlinks gray

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>

* Update layouts/partials/announcement.html

Co-authored-by: Meg McRoberts <mmcroberts@cloudbees.com>

Signed-off-by: Oleg Nenashev <o.v.nenashev@gmail.com>
Co-authored-by: Meg McRoberts <mmcroberts@cloudbees.com>

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -29,7 +29,7 @@
     transition: all 0.3s;
     display: flex;
     align-items: center;
-    height: 80px;
+    height: 160px;
     font-size: 2.8rem;
     background-color: transparent;
     color: transparent;
@@ -110,6 +110,15 @@
           background: linear-gradient(-225deg, $primary-home-900 0%, #10478f 100%);
         }
       }
+    }
+  }
+}
+
+.box-announcements {
+  .ul.li {
+    a {
+      font-family: $font-family-base;
+      color: $white;
     }
   }
 }
