--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,8 +1,13 @@
-<div class="teaser section-primary">
+<div class="teaser teaser-box--white section-primary push-down">
   <div class="container">
     <div class="row">
-      <div class="col-12 d-flex flex-column text-center">
-        <h3>Keptn 0.19.1 is available! Find all <a href="./docs/news/release_announcements/keptn-0191/">details on this release here</a>. </h3>
+      <div class="col-12 d-flex flex-column box-announcements">
+        <ul>
+          <li>Join us for Kubecon and <a href="https://community.cncf.io/events/details/cncf-keptn-community-presents-keptn-community-day-kubecon-cloudnativecon-detroit/">Keptn Community Day</a> in Detroit!
+              Community booth in the project pavillion, cool demos, main track talks, and a first ever full-day Keptn event.
+          <li>Check out the <a href="https://github.com/keptn/lifecycle-controller">Lifecycle Controller</a>! Cloud native pre-, post-deployment and application health checks.
+          <li>Keptn 0.19.1 is available! Find <a href="./docs/news/release_announcements/keptn-0191/">details here</a>.
+        </ul>
       </div>
     </div>
   </div>
