--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -50,12 +50,16 @@
     </div>
     <div class="row pt-3 pt-md-0">
       <div class="col-12 pt-4">
-        <p class="footer-text">Initially created by <a href="https://www.dynatrace.com"  class="footer-text" target="_blank" rel="noopener">Dynatrace</a></p>
+        <p class="footer-text"> Keptn is a <a href=https://www.cncf.io/projects/ class="footer-text" target="_blank" rel="noopener">CNCF Incubating Project</a>.
+          Initially created by <a href="https://www.dynatrace.com"  class="footer-text" target="_blank" rel="noopener">Dynatrace</a> in 2019.
+        </p>
         {{ $year := now.Year }}
         <p class="footer-text">
         &copy; {{ $year }} The Keptn Authors | Documentation Distributed under CC-BY-4.0
         </br>
         &copy; {{ $year }} The Linux Foundation. All rights reserved. The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, please see our <a href="https://www.linuxfoundation.org/trademark-usage/" class="footer-text">Trademark Usage</a> page.
+        </p>
+        <p class="footer-text">This website is powered by <a href="https://www.netlify.com/"  class="footer-text" target="_blank" rel="noopener">Netlify</a>
         </p>
       </div>
     </div>
