Upgrading hugo to 0.105
Upgrading to a more recent version of hugo.
The page is building, and looks good, but there might be hidden
regressions which somebody working with the documentation should
actually inspect

Signed-off-by: Simon Schrottner <simon.schrottner@dynatrace.com>

--- a/layouts/shortcodes/popup_image.html
+++ b/layouts/shortcodes/popup_image.html
@@ -42,9 +42,9 @@ Usage:
     {{- if (ne $prefix "https://") -}}
         {{- $prefix := slicestr $link 0 3 -}}
         {{- if (eq $prefix "../") -}}
-            {{- $link = printf "/%s%s" .Page.Dir (slicestr $link 3) -}}
+            {{- $link = printf "/%s%s" .Page.File.Dir (slicestr $link 3) -}}
         {{- else -}}
-            {{- $link = printf "/%s%s" .Page.Dir $link -}}
+            {{- $link = printf "/%s%s" .Page.File.Dir $link -}}
         {{- end -}}
     {{- end -}}
 {{- end -}}
