--- a/layouts/partials/sidebar-multicard.html
+++ b/layouts/partials/sidebar-multicard.html
@@ -39,7 +39,7 @@
         {{ end }}
 
         {{ if not .Site.Data.args.archive }}
-        {{ if strings.HasSuffix $section.Dir "blog/" }}
+        {{ if strings.HasSuffix $section.File.Dir "blog/" }}
         <div class="subscribe">
             <a href="/feed.xml" target="_blank">
                 {{ partial "large_icon.html" "rss" }}{{ i18n "subscribe" }}
