remove footer link + update link to integrations
Signed-off-by: agardnerit <adam@agardner.net>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,8 +13,7 @@
         <ul class="footer-links">
           <li><a href="/why-keptn/" class="footer-link">Why Keptn?</a></li>
           <li><a href="https://keptn.sh/docs" class="footer-link">Docs</a></li>
-          <li><a href="https://tutorials.keptn.sh" class="footer-link">Tutorials</a></li>
-          <li><a href="https://github.com/keptn-contrib" class="footer-link">Integrations</a></li>
+          <li><a href="https://keptn.sh/docs/integrations" class="footer-link">Integrations</a></li>
           <li><a href="https://keptn.sh/docs/explore/" class="footer-link">Explore Keptn</a></li>
         </ul>
       </div>
