--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-12 d-flex flex-column box-announcements">
         <ul>
-          <li>Check out the <a href="https://github.com/keptn/lifecycle-controller">Lifecycle Controller</a>! Cloud native pre-, post-deployment and application health checks.</li>
-          <li>Keptn 0.19.1 is available! Find <a href="./docs/news/release_announcements/keptn-0191/">details here</a>.</li>
+          <li>Check out the <a href="https://github.com/keptn/lifecycle-controller">Lifecycle Controller</a>! Cloud native pre-, post-deployment and application health checks.
+          <li>Keptn 0.19.2 is available! Find <a href="./docs/news/release_announcements/keptn-0192/">details here</a>.
         </ul>
       </div>
     </div>
